# ele4205

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
include/: capture.hpp  client.hpp  common.hpp  musicPlayer.hpp  server.hpp  transfer.hpp
src/: capture.cpp  client.cpp  main.cpp  musicPlayer.cpp  server.cpp
